--- a/fmi-native-export/build.gradle
+++ b/fmi-native-export/build.gradle
@@ -1,3 +1,4 @@
+import org.gradle.internal.jvm.Jvm
 import org.gradle.internal.os.OperatingSystem
 
 plugins {
@@ -9,6 +10,8 @@ if (pythonHome == null) {
     throw new GradleException("No PYTHONHOME set!")
 }
 def pythonLib = new File(pythonHome).name.toLowerCase()
+
+def javaHome = Jvm.current().javaHome
 
 library { CppLibrary lib ->
 
@@ -22,9 +25,26 @@ library { CppLibrary lib ->
     lib.binaries.whenElementFinalized { CppBinary binary ->
         project.dependencies {
 
+            //python
             add(binary.runtimeLibraries.name, files("$pythonHome"))
             add(binary.includePathConfiguration.name, files("$pythonHome/include"))
             add(binary.linkLibraries.name, files(OperatingSystem.current().getLinkLibraryName("$pythonHome/libs/$pythonLib")))
+
+            //jni
+            add(binary.runtimeLibraries.name, files("$javaHome/jre/bin/server"))
+            add(binary.includePathConfiguration.name, files("$javaHome/include"))
+
+            if (OperatingSystem.current().isLinux()) {
+                add(binary.includePathConfiguration.name, files("$javaHome/include/linux"))
+                def libjvm = OperatingSystem.current().getLinkLibraryName("$javaHome/lib/server/jvm")
+                Runtime.getRuntime().exec("sh", "-c", "sudo chmod +x $libjvm")
+                add(binary.linkLibraries.name, files(libjvm))
+            } else if (OperatingSystem.current().isWindows()) {
+                add(binary.includePathConfiguration.name, files("$javaHome/include/win32"))
+                add(binary.linkLibraries.name, files(OperatingSystem.current().getLinkLibraryName("$javaHome/lib/jvm")))
+            } else {
+                throw new IllegalStateException("Unsupported OS: " + OperatingSystem.current().name)
+            }
 
         }
 
