--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,7 @@ jobs:
         java-version: 11.0.3
 
     - name: Build
-      run: ./gradlew clean build shadowJar
+      run: ./gradlew -PskipBuildNative=true clean build shadowJar
       shell: bash
 
     - uses: actions/upload-artifact@master
