Compile with /MT under MSCV

--- a/pythonfmu-export/CMakeLists.txt
+++ b/pythonfmu-export/CMakeLists.txt
@@ -11,6 +11,21 @@ set(BUILD_SHARED_LIBS ON)
 # Global internal configuration
 # ==============================================================================
 
+if (MSVC)
+    # https://stackoverflow.com/questions/14172856/compile-with-mt-instead-of-md-using-cmake
+    set(CompilerFlags
+            CMAKE_CXX_FLAGS
+            CMAKE_CXX_FLAGS_DEBUG
+            CMAKE_CXX_FLAGS_RELEASE
+            CMAKE_C_FLAGS
+            CMAKE_C_FLAGS_DEBUG
+            CMAKE_C_FLAGS_RELEASE
+            )
+    foreach(CompilerFlag ${CompilerFlags})
+        string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
+    endforeach()
+endif()
+
 # Automatically export all symbols in Windows DLLs.
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
