--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ classifiers =
 	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Topic :: Scientific/Engineering
+tests_require = 
+	pytest
+	pyfmi
 
 [options]
 packages = find:
@@ -29,3 +32,8 @@ packages = find:
 [options.entry_points]
 console_scripts = 
 	pythonfmu-builder = pythonfmu.builder
+
+[options.extras_require]
+tests = 
+	pytest
+	pyfmi
