--- a/setup.cfg
+++ b/setup.cfg
@@ -27,11 +27,18 @@ tests_require =
 	pyfmi
 
 [options]
+include_package_data = True
 packages = find:
+zip_safe = False
+
+[options.package_data]
+pythonfmu = 
+	resources/*.dll
+	resources/*.so
 
 [options.entry_points]
 console_scripts = 
-	pythonfmu-builder = pythonfmu.builder
+	pythonfmu-builder = pythonfmu.builder:main
 
 [options.extras_require]
 tests = 
