--- a/pythonfmu-builder/build.gradle
+++ b/pythonfmu-builder/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'application'
-    id "org.jetbrains.kotlin.jvm" version "1.3.50"
+    id "org.jetbrains.kotlin.jvm" version "1.3.61"
     id "com.github.johnrengelman.shadow" version "4.0.4"
 }
 
@@ -9,6 +9,7 @@ println "Gradle version is ${gradle.getGradleVersion()}"
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
+    gradleVersion = '6.0.1'
 }
 
 def group = "no.ntnu.ihb.pythonfmu"
@@ -29,7 +30,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-params:$junit_version")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junit_version")
 
-    testCompile 'no.ntnu.ihb.fmi4j:fmi-import:0.24.3'
+    testCompile 'no.ntnu.ihb.fmi4j:fmi-import:0.28.3'
 
 }
 
