--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,24 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install Python
-      uses: actions/setup-python@v1
+    - name: Load conda
+      uses: goanpeca/setup-miniconda@v1
       with:
+        # auto-update-conda: true
         python-version: '3.7'
-        architecture: 'x64'
 
-    - name: Install pythonfmu and its test dependencies
+    - name: Install conda compiler
+      if: runner.os == 'Linux'
       run: |
-        python -m pip install Cython numpy
-        python -m pip install .[tests]
-      shell: bash
+        conda install -c conda-forge -c anaconda gxx_linux-64 cmake
+      shell: bash -l {0}
+
+    - name: Test pythonfmu and its test dependencies
+      run: |
+        conda install -c conda-forge -c anaconda pyfmi pytest
+        python -m pip install .
+      shell: bash -l {0}
 
     - name: Run the Tests
       run: python -m pytest pythonfmu
+      shell: bash -l {0}
