--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,25 +19,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Load conda
-      uses: goanpeca/setup-miniconda@v1
+    - name: Install Python
+      uses: actions/setup-python@v1
       with:
-        auto-update-conda: true
         python-version: '3.7'
+        architecture: 'x64'
 
-    - name: Install conda compiler
-      if: runner.os == 'Linux'
+    - name: Install pythonfmu and its test dependencies
       run: |
-        conda install -c conda-forge -c anaconda gxx_linux-64 cmake
-      shell: bash -l {0}
-
-    - name: Test pythonfmu and its test dependencies
-      run: |
-        conda install -c conda-forge -c anaconda pyfmi pytest
-      shell: bash -l {0}
+        python -m pip install pytest
+        python -m pip install .
+      # shell: bash
 
     - name: Run the Tests
-      run: |
-        python -m pip install . -v
-        python -m pytest pythonfmu
-      shell: bash -l {0}
+      run: python -m pytest pythonfmu
