--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install pythonfmu and its test dependencies
       run: |
-        python -m pip install pytest
+        python -m pip install pytest setuptools wheel
         python -m pip install . -v
 
     - name: Run the Tests
@@ -36,9 +36,11 @@ jobs:
         mkdir test_dir
         cd test_dir
         python -m pytest --pyargs pythonfmu.tests
+        cd ..
     
     - name: Build distribution artifacts
-      run: python setup.py bdist_wheel
+      run: |
+        python setup.py bdist_wheel
 
     - name: Archive production artifacts
       uses: actions/upload-artifact@v1
