--- a/pythonfmu/pythonfmu-export/CMakeLists.txt
+++ b/pythonfmu/pythonfmu-export/CMakeLists.txt
@@ -57,6 +57,8 @@ target_include_directories(pythonfmu-export
         "${CMAKE_CURRENT_SOURCE_DIR}"
         )
 
+# Force to use stable Python ABI https://docs.python.org/3/c-api/stable.html
+add_compile_definitions(Py_LIMITED_API)
 target_link_libraries(pythonfmu-export
         PRIVATE
         Python3::Python
