--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
     - name: Install pythonfmu and its test dependencies
       run: |
         python -m pip install pytest setuptools wheel
+        ls ${{ pythonLocation }}
+        ls ${{ pythonLocation }}/libs
         python -m pip install . -v
 
     - name: Run the Tests
