--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.x]
+#        os: [ubuntu-latest, windows-latest]
+#        python-version: [3.6, 3.7, 3.x]
+        os: [windows-latest]
+        python-version: [3.7]
     
     steps:
     - uses: actions/checkout@v2
@@ -29,8 +31,8 @@ jobs:
     - name: Install pythonfmu and its test dependencies
       run: |
         python -m pip install pytest setuptools wheel
-        ls ${{ pythonLocation }}
-        ls ${{ pythonLocation }}/libs
+        ls C:\hostedtoolcache\windows\Python\3.7.6\x64
+        ls C:\hostedtoolcache\windows\Python\3.7.6\x64\libs
         python -m pip install . -v
 
     - name: Run the Tests
