Undo cmake path search

--- a/pythonfmu/pythonfmu-export/CMakeLists.txt
+++ b/pythonfmu/pythonfmu-export/CMakeLists.txt
@@ -35,8 +35,7 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
 # Force to use stable Python ABI https://docs.python.org/3/c-api/stable.html
 add_compile_definitions(Py_LIMITED_API)
-find_package(Python3 REQUIRED COMPONENTS Interpreter Development 
-             NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
+find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 if(WIN32)
     set(Python3_LIBRARIES ${Python3_LIBRARY_DIRS}/python3.lib)
 endif()
