--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,45 +9,93 @@ on:
       - '*'
 
 jobs:
-  build:
+  build-wrapper:
 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-#        os: [ubuntu-latest, windows-latest]
-#        python-version: [3.6, 3.7, 3.x]
-        os: [windows-latest]
-        python-version: [3.7]
+        os: [ubuntu-latest, windows-latest]
     
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-        architecture: 'x64'
+      - name: Setup Python 3.x
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.x'
+          architecture: 'x64'
 
-    - name: Install pythonfmu and its test dependencies
-      run: |
-        python -m pip install pytest setuptools wheel
-        ls C:\hostedtoolcache\windows\Python\3.7.6\x64
-        ls C:\hostedtoolcache\windows\Python\3.7.6\x64\libs
-        python -m pip install . -v
+      - name: Compile wrapper on Windows
+        if: startsWith(runner.os, 'Windows')
+        run: |
+          mkdir tmp-build
+          cd tmp-build
+          cmake $Env:github_workspace/pythonfmu/pythonfmu-export -DCMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE=$Env:github_workspace/pythonfmu/resources/binaries/win64 -DCMAKE_BUILD_TYPE=Release -A x64 -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
+          cmake --build .
+          cd ..
 
-    - name: Run the Tests
-      run: |
-        mkdir test_dir
-        cd test_dir
-        python -m pytest --pyargs pythonfmu.tests
-        cd ..
+      - name: Compile wrapper on Linux
+        if: startsWith(runner.os, 'Linux')
+        run: |
+          mkdir tmp-build
+          cd tmp-build
+          cmake $GITHUB_WORKSPACE/pythonfmu/pythonfmu-export -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=$GITHUB_WORKSPACE/pythonfmu/resources/binaries/linux64 -DCMAKE_BUILD_TYPE=Release
+          cmake --build .
+          cd ..
+
+      - name: Archive wrapper library
+        uses: actions/upload-artifact@v1
+        with:
+          name: lib-wrapper
+          path: pythonfmu/resources
+
+  build-python:
+    needs: build-wrapper
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download wrappers
+        uses: actions/download-artifact@v1
+        with:
+          name: lib-wrapper
+          path: pythonfmu/resources
     
-    - name: Build distribution artifacts
-      run: |
-        python setup.py bdist_wheel
+      - name: Build distribution artifacts
+        run: |
+          ls pythonfmu/resources/binaries
+          python -m pip install setuptools wheel
+          python setup.py bdist_wheel
 
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: dist
-        path: dist
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: python-wheel
+          path: dist
+
+  test:
+    needs: build-python
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        python-version: [3.6, 3.7, 3.x]
+    
+    steps:
+      - name: Download python package
+        uses: actions/download-artifact@v1
+        with:
+          name: python-wheel
+
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: 'x64'
+        
+      - name: Run the Tests
+        run: |
+          python -m pip install pytest pyfmi wheel
+          cd python-wheel
+          ls .
+          python -m pip install pythonfmu*.whl
+          python -m pytest --pyargs pythonfmu.tests
+          cd ..
