--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           mkdir tmp-build
           cd tmp-build
-          cmake $Env:github_workspace/pythonfmu/pythonfmu-export -DCMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE="$Env:github_workspace/pythonfmu/resources/binaries/win64" -DCMAKE_BUILD_TYPE=Release -A x64 -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
+          cmake $Env:github_workspace/pythonfmu/pythonfmu-export -DCMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE="$Env:github_workspace/pythonfmu/resources/binaries/win64" -DCMAKE_BUILD_TYPE=Release -A x64
           cmake --build . --config Release
           cd ..
 
@@ -53,6 +53,8 @@ jobs:
     needs: build-wrapper
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       - name: Download wrappers
         uses: actions/download-artifact@v1
         with:
@@ -61,7 +63,8 @@ jobs:
     
       - name: Build distribution artifacts
         run: |
-          ls pythonfmu/resources/binaries
+          ls pythonfmu/resources/binaries/win64
+          ls pythonfmu/resources/binaries/linux64
           python -m pip install setuptools wheel
           python setup.py bdist_wheel
 
