--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Setup Python 3.x
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.x'
+          architecture: 'x64'
+
       - name: Download wrappers
         uses: actions/download-artifact@v1
         with:
