--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.x]
+        # python-version: [3.6, 3.7, 3.x]
+        python-version: [3]
     
     steps:
       - name: Download python package
@@ -93,14 +94,13 @@ jobs:
           name: python-wheel
 
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: goanpeca/setup-miniconda@v1
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: 'x64'
         
       - name: Run the Tests
         run: |
-          python -m pip install pytest pyfmi wheel
+          conda install -c conda-forge pytest pyfmi
           cd python-wheel
           ls .
           python -m pip install pythonfmu*.whl
