--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
         
-      - name: Run the Tests
+      - name: Run the Tests on Linux
+        if: startsWith(runner.os, 'Linux')
         run: |
           conda install -c conda-forge pytest pyfmi
           cd python-wheel
@@ -106,3 +107,15 @@ jobs:
           python -m pip install pythonfmu*.whl
           python -m pytest --pyargs pythonfmu.tests
           cd ..
+        shell: bash -l {0}
+        
+      - name: Run the Tests on Windows
+        if: startsWith(runner.os, 'Windows')
+        run: |
+          conda install -c conda-forge pytest pyfmi
+          cd python-wheel
+          ls .
+          python -m pip install pythonfmu*.whl
+          python -m pytest --pyargs pythonfmu.tests
+          cd ..
+        shell: cmd /C call {0}
