--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,6 +119,7 @@ jobs:
       - name: Setup Python ${{ matrix.python-version }}
         uses: goanpeca/setup-miniconda@v1
         with:
+          auto-update-conda: true
           python-version: ${{ matrix.python-version }}
         
       - name: Run the Tests on Linux
@@ -134,9 +135,9 @@ jobs:
       - name: Run the Tests on Windows
         if: startsWith(runner.os, 'Windows')
         run: |
-          conda install -c conda-forge pytest pyfmi
           python -V
           conda info
+          conda install -c conda-forge pytest pyfmi
           ls python-wheel
           cd python-wheel
           python -m pip install pythonfmu*.whl
