--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,25 +95,21 @@ jobs:
       - name: Cache conda packages for Linux
         if: startsWith(runner.os, 'Linux')
         uses: actions/cache@v1
-        env:
-          cache-name: cache-conda-pkgs
         with:
           path: /usr/share/miniconda/pkgs
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ matrix.python-version }}
+          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
           restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-cache-conda-pkgs-
             ${{ runner.os }}-test-
 
       - name: Cache conda packages for Windows
         if: startsWith(runner.os, 'Windows')
         uses: actions/cache@v1
-        env:
-          cache-name: cache-conda-pkgs
         with:
           path: C:\Miniconda\pkgs
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ matrix.python-version }}
+          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
           restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-cache-conda-pkgs-
             ${{ runner.os }}-test-
 
       - name: Setup Python ${{ matrix.python-version }}
@@ -122,25 +118,12 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
         
-      - name: Run the Tests on Linux
-        if: startsWith(runner.os, 'Linux')
+      - name: Run the Tests
         run: |
-          conda install -c conda-forge pytest pyfmi
+          conda activate test
+          conda install -n test -c conda-forge pytest pyfmi
           cd python-wheel
           python -m pip install pythonfmu*.whl
           python -m pytest --pyargs pythonfmu
           cd ..
         shell: bash -l {0}
-        
-      - name: Run the Tests on Windows
-        if: startsWith(runner.os, 'Windows')
-        run: |
-          python -V
-          conda info
-          conda install -c conda-forge pytest pyfmi
-          ls python-wheel
-          cd python-wheel
-          python -m pip install pythonfmu*.whl
-          python -m pytest --pyargs pythonfmu
-          cd ..
-        shell: pwsh
