Add build on macOS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
     
     steps:
       - uses: actions/checkout@v2
@@ -40,6 +40,15 @@ jobs:
           mkdir tmp-build
           cd tmp-build
           cmake $GITHUB_WORKSPACE/pythonfmu/pythonfmu-export -DCMAKE_BUILD_TYPE=Release
+          cmake --build . --config Release
+          cd ..
+
+      - name: Compile wrapper on macOS
+        if: startsWith(runner.os, 'macOS')
+        run: |
+          mkdir tmp-build
+          cd tmp-build
+          cmake $GITHUB_WORKSPACE/pythonfmu/pythonfmu-export -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=$GITHUB_WORKSPACE/pythonfmu/resources/binaries/darwin64 -DCMAKE_BUILD_TYPE=Release
           cmake --build . --config Release
           cd ..
 
@@ -83,7 +92,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8]
     
     steps:
@@ -94,6 +103,16 @@ jobs:
 
       - name: Cache conda packages for Linux
         if: startsWith(runner.os, 'Linux')
+        uses: actions/cache@v1
+        with:
+          path: /usr/share/miniconda/pkgs
+          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
+          restore-keys: |
+            ${{ runner.os }}-test-cache-conda-pkgs-
+            ${{ runner.os }}-test-
+
+      - name: Cache conda packages for Mac OS
+        if: startsWith(runner.os, 'macOS')
         uses: actions/cache@v1
         with:
           path: /usr/share/miniconda/pkgs
