--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ zip_safe = False
 [options.package_data]
 pythonfmu = 
 	resources/*.dll
+	resources/*.dylib
 	resources/*.so
 
 [options.entry_points]
