--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           mkdir tmp-build
           cd tmp-build
-          cmake $Env:github_workspace/pythonfmu/pythonfmu-export -DCMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE="$Env:github_workspace/pythonfmu/resources/binaries/win64" -DCMAKE_BUILD_TYPE=Release -A x64
+          cmake $Env:github_workspace/pythonfmu/pythonfmu-export -DCMAKE_BUILD_TYPE=Release -A x64
           cmake --build . --config Release
           cd ..
 
@@ -39,7 +39,7 @@ jobs:
         run: |
           mkdir tmp-build
           cd tmp-build
-          cmake $GITHUB_WORKSPACE/pythonfmu/pythonfmu-export -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=$GITHUB_WORKSPACE/pythonfmu/resources/binaries/linux64 -DCMAKE_BUILD_TYPE=Release
+          cmake $GITHUB_WORKSPACE/pythonfmu/pythonfmu-export -DCMAKE_BUILD_TYPE=Release
           cmake --build . --config Release
           cd ..
 
