Handle darwin and 32 bit platforms

--- a/pythonfmu/pythonfmu-export/CMakeLists.txt
+++ b/pythonfmu/pythonfmu-export/CMakeLists.txt
@@ -12,19 +12,19 @@ set(BUILD_SHARED_LIBS ON)
 # ==============================================================================
 
 if (MSVC)
-    # https://stackoverflow.com/questions/14172856/compile-with-mt-instead-of-md-using-cmake
-    set(CompilerFlags
-            CMAKE_CXX_FLAGS
-            CMAKE_CXX_FLAGS_DEBUG
-            CMAKE_CXX_FLAGS_RELEASE
-            CMAKE_C_FLAGS
-            CMAKE_C_FLAGS_DEBUG
-            CMAKE_C_FLAGS_RELEASE
-            )
-    foreach(CompilerFlag ${CompilerFlags})
-        string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
-    endforeach()
-endif()
+  # https://stackoverflow.com/questions/14172856/compile-with-mt-instead-of-md-using-cmake
+  set(CompilerFlags
+          CMAKE_CXX_FLAGS
+          CMAKE_CXX_FLAGS_DEBUG
+          CMAKE_CXX_FLAGS_RELEASE
+          CMAKE_C_FLAGS
+          CMAKE_C_FLAGS_DEBUG
+          CMAKE_C_FLAGS_RELEASE
+          )
+  foreach (CompilerFlag ${CompilerFlags})
+    string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
+  endforeach ()
+endif ()
 
 # Automatically export all symbols in Windows DLLs.
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
@@ -36,9 +36,9 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 # Force to use stable Python ABI https://docs.python.org/3/c-api/stable.html
 add_compile_definitions(Py_LIMITED_API)
 find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
-if(WIN32)
-    set(Python3_LIBRARIES ${Python3_LIBRARY_DIRS}/python3.lib)
-endif()
+if (WIN32)
+  set(Python3_LIBRARIES ${Python3_LIBRARY_DIRS}/python3.lib)
+endif ()
 
 # ==============================================================================
 # Sources
@@ -69,13 +69,20 @@ target_link_libraries(pythonfmu-export
         )
 
 if (WIN32)
-  set_target_properties(pythonfmu-export
-          PROPERTIES
-          RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/../resources/binaries/win64"
-          )
-elseif (UNIX)
-  set_target_properties(pythonfmu-export
-          PROPERTIES
-          LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../resources/binaries/linux64"
-          )
+  set(TARGET_PLATFORM win)
+elseif (APPLE)
+  set(TARGET_PLATFORM darwin)
+else ()
+  set(TARGET_PLATFORM linux)
 endif ()
+
+if ("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8")
+  set(TARGET_PLATFORM ${TARGET_PLATFORM}64)
+else ()
+  set(TARGET_PLATFORM ${TARGET_PLATFORM}32)
+endif ()
+
+set_target_properties(pythonfmu-export
+        PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/../resources/binaries/${TARGET_PLATFORM}"
+        )
